--- a/Chat And Note/Views/Storyboards/Base.lproj/Main.storyboard
+++ b/Chat And Note/Views/Storyboards/Base.lproj/Main.storyboard
@@ -73,6 +73,21 @@
             </objects>
             <point key="canvasLocation" x="764" y="854"/>
         </scene>
+        <!--View Controller-->
+        <scene sceneID="WKw-tb-nOM">
+            <objects>
+                <viewController id="LSg-mi-zmc" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="3Lj-65-L8s">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <viewLayoutGuide key="safeArea" id="k6D-0J-RoF"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Df5-u3-flv" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2615.9420289855075" y="429.91071428571428"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="xq6-Y8-DtM">
             <objects>
